fix img gallery spacing, quote length, div margin

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0px;
+    display: flex;
+    flex-direction: column;
 }
 
 .linksLogo {
@@ -112,6 +114,10 @@ body {
 
 .pictures { 
 
+    display: flex;
+    flex-direction: column;
+
+    height: fit-content;
 }
 
 .randomInfo {
@@ -129,14 +135,19 @@ body {
     justify-content: space-around;
     font-size: 12px;
     text-align: center;
-    gap: 10px;
-    padding: 50px;
-
-    height: 200px;
-    width: auto;
+    gap: 50px;
+    padding: 25px;
 }
 
-.pics4x img {
+.box {
+    height: 100%; 
+}
+
+.box img {
+
+    padding: 100px;
+
+    border: 2px solid #3882f6;
     
 }
 
@@ -145,6 +156,9 @@ body {
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   flex: 1;
+   width: 100%;
+   margin: 20px 0px;
 
 
    font-size: 20px;
@@ -153,7 +167,7 @@ body {
 
 .mainQuote {
     display: flex;
-    width: 50%;
+    width:60%;
     flex: 1;
 
     color: #1F2937;
@@ -163,7 +177,7 @@ body {
 
 .saidQuote {
     display: flex;
-    width: 50%;
+    width: 60%;
     justify-content: flex-end;
     
 }
@@ -176,16 +190,15 @@ body {
 .callToAction {
     display: flex;
 
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 
     
     color: #F9FAF8;
     background-color: #3882f6;
-    padding: 20px;
-    margin: auto;
-    width: 75%;
-    gap: 20px;
+    padding: 30px;
+    margin: 50px;
+    gap: 100px;
 
 }
 
@@ -202,7 +215,7 @@ body {
 
 .button button {
    display: flex;
-   justify-content: center;
+   justify-content: flex-start;
    align-items: center;
 
    border: 2px solid #F9FAF8;
